# QCrBox

./: .dockerignore  .env.dev  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  devbox.json  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.run.yml  docker-compose.yml  dodo.py  mkdocs.yml  process-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt
pyqcrbox/: .coveragerc  README.md  pyproject.toml  requirements-all.txt  requirements-client.txt  requirements-dev.txt  requirements-docs.txt  requirements-server.txt  requirements.txt
pyqcrbox/pyqcrbox/: __init__.py  db_helpers.py  helpers.py  logging.py  settings.py  svcs.py
pyqcrbox/pyqcrbox/cli/: __init__.py  cli.py
pyqcrbox/pyqcrbox/cli/helpers/: __init__.py  cli_helpers.py  compose_file_config.py  docker_project.py  qcrbox_helpers.py
pyqcrbox/pyqcrbox/cli/subcommands/: __init__.py  build.py  dev.py  down.py  init.py  invoke.py  list.py  status.py  up.py  validate.py  version.py
pyqcrbox/pyqcrbox/data_management/: __init__.py  base.py  base_data_file_manager.py  data_file.py  data_file_manager.py  dummy_data_file_manager.py  nats_data_file_manager.py
pyqcrbox/pyqcrbox/msg_specs/: __init__.py  actions.py  base.py  message_processing.py  responses.py
pyqcrbox/pyqcrbox/msg_specs/actions/: __init__.py  accept_command_invocation.py  execute_command.py  invoke_command.py  register_application.py
pyqcrbox/pyqcrbox/msg_specs/msg_types/: __init__.py  initiate_command_execution.py  invoke_command.py  register_application.py
pyqcrbox/pyqcrbox/msg_specs/sql_models/: __init__.py  application_spec.py
pyqcrbox/pyqcrbox/registry/: __init__.py  base.py  base_fastapi_v2.py  client.py  helpers.py  router.py  server.py
pyqcrbox/pyqcrbox/registry/client/: __init__.py  api.py  api_endpoints.py  asgi_server.py  calculation.py  client.py  client_status.py  command_execution.py  external_command.py  message_processing.py  qcrbox_client.py  qcrbox_test_client.py  rabbit_broker.py
pyqcrbox/pyqcrbox/registry/server/: __init__.py  api.py  api_endpoints.py  asgi_server.py  db_helpers.py  helpers.py  message_processing.py  qcrbox_server.py  qcrbox_test_server.py  rabbit_broker.py  server.py
pyqcrbox/pyqcrbox/registry/shared/: __init__.py  calculation_status.py  message_dispatch.py  qcrbox_server_client_base.py  structlog_config.py
pyqcrbox/pyqcrbox/registry_BAK/: __init__.py  base_fastapi.py  base_fastapi_v2.py  msg_counter.py  router.py
pyqcrbox/pyqcrbox/registry_BAK/client/: command_execution.py  python_callable.py
pyqcrbox/pyqcrbox/registry_BAK/server/: server.py  server_with_fastapi.py
pyqcrbox/pyqcrbox/services/: __init__.py  convenience_accessor_functions.py  services_registry.py
pyqcrbox/pyqcrbox/sql_models/: __init__.py  application.py  application_spec.py  base.py  calculation.py  calculation_status_event.py  call_pattern.py  cif_entry.py  cif_entry_set.py  command.py  command_execution.py  command_invocation.py  command_spec.py  parameter.py  parameter_spec.py  qcrbox_base_models.py  qcrbox_base_sql_model.py
pyqcrbox/pyqcrbox/sql_models/command_spec/: call_pattern.py  cli_command_spec.py  command_spec_db.py  non_interactive_command_spec.py
pyqcrbox/pyqcrbox/sql_models/parameter_spec/: __init__.py
pyqcrbox/pyqcrbox/sql_models_BAK/: application_spec.py  command_spec.py
pyqcrbox/pyqcrbox/sql_models_NEW/: __init__.py  application.py  cif_entry_set.py  command.py  parameter.py  parameter_types.py
pyqcrbox/pyqcrbox/sql_models_NEW/parameter/: parameter_BAK.py  parameter_types.py
pyqcrbox/pyqcrbox/sql_models_NEW__BAK_2024-07-23/: __init__.py  application.py  base.py  cif_entry_set.py  command.py
pyqcrbox/pyqcrbox/sql_models_NEW__BAK_2024-07-23/parameter/: __init__.py  base_spec.py  builtin_parameter_types.py  parameter_BAK.py  (+2 more)
pyqcrbox/pyqcrbox/sql_models_NEW_v2/: __init__.py  application_spec.py  application_spec_db.py  base.py  calculation.py  calculation_status_event.py  cif_entry_set.py  command_execution.py  command_invocation.py  command_spec.py  parameter_spec.py
pyqcrbox/pyqcrbox/sql_models__BAK_2024-07-23/: __init__.py  application.py  calculation.py  calculation_status_event.py  cif_entry_set.py  command.py  qcrbox_base_models.py
pyqcrbox/pyqcrbox/svcs/: __init__.py  helper_functions.py  persistence.py
pyqcrbox/tests/: conftest.py  sample_application_spec.yaml  sample_application_spec.yaml_BAK  test_calculation.py  test_client.py  test_client_registration.py  test_command_invocation_via_api.py  test_data_file_manager.py  test_invoke_command.py  test_parse_application_yaml_configs.py  test_python_callable.py  test_qcrbox_wrapper.py  test_qrbox_wrapper.py  test_registry.py  test_server.py  test_services.py  test_settings.py  test_sql_models.py
pyqcrbox/tests/end_to_end_tests/: approvals.bash  test_qcb_commands.sh  test_qcb_list.sh
pyqcrbox/tests/sample_data/: periodic_table.cif
pyqcrbox/tests_BAK/: conftest_BAK.py
pyqcrbox/tests_BAK_2024-09-02/: conftest.py  test_client.py  test_client_registration.py  test_server.py
qcrbox/: README.md  pyproject.toml  requirements-all.txt  requirements-client.in  requirements-client.txt  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements-server.in  requirements-server.txt  requirements.in  requirements.txt
qcrbox/qcrbox/: __init__.py  logging.py
qcrbox/qcrbox/cli/: cli.py  main.py  task_build.py  task_down.py  task_up.py  utils_docker.py  utils_doit.py
qcrbox/qcrbox/common/: __init__.py  utils.py
qcrbox/qcrbox/registry/: __init__.py  database.py  helpers.py  server.py
qcrbox_wrapper/: README.md  pyproject.toml  requirements-env-file.txt  requirements.txt
qcrbox_wrapper/qcrbox_wrapper/: __init__.py  qcrbox_application.py  qcrbox_calculation.py  qcrbox_command.py  qcrbox_interactive_session.py  qcrbox_wrapper.py
qcrbox_wrapper/qcrbox_wrapper_new/: __init__.py  qcrbox_application.py  qcrbox_calculation.py  qcrbox_command.py  qcrbox_interactive_session.py  qcrbox_wrapper.py
qcrbox_wrapper/qcrbox_wrapper_old/: __init__.py  qcrbox_wrapper.py
(+496 files in other folders)
