[project]
name = "qcrbox"
authors = [
  { name="Maximilian Albert", email="maximilian.albert@gmail.com" },
]
description = "Quantum Crystallography Toolbox"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = [
    "version",
    "dependencies",
    "optional-dependencies",
]
[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements-dev.txt"]
docs = ["requirements-docs.txt"]
client = ["requirements-client.txt"]
server = ["requirements-server.txt"]
all = [
    "requirements-dev.txt",
    "requirements-docs.txt",
    "requirements-client.txt",
    "requirements-server.txt",
]

[project.urls]
"Repository" = "https://github.com/QCrBox/QCrBox/"
"Issue Tracker" = "https://github.com/QCrBox/QCrBox/issues"

[project.scripts]
qcb = "qcrbox.cli:entry_point"
qcrbox-run-registry-server = "qcrbox.registry.server:main"

[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.setuptools_scm]
version_file = "qcrbox/_version.py"

[tool.hatch.build.hooks.vcs]
version-file = "qcrbox/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["qcrbox"]

[tool.hatch.build.targets.wheel]
only-include = ["qcrbox"]
