[project]
name = "qcrbox"
authors = [
  { name="Maximilian Albert", email="maximilian.albert@gmail.com" },
]
description = "Quantum Crystallography Toolbox"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = [
    "version",
]
dependencies = [
    "anyio~=3.7.1",
    "click",
    "doit",
    "gitpython",
    "hatch",
    "loguru",
    "pydantic",
    "python-dateutil",
    "pyyaml",
    "requests",
    "setuptools_scm",
    "sqlmodel",
    "tabulate",
]

[project.optional-dependencies]
dev = [
    "ipdb",
    "ipython",
    "pip-tools",
    "pre-commit",
    "reuse",
    "ruff",
    "setuptools_scm",
]
docs = [
    "mkdocs",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-material",
    "pymdown-extensions",
]
client = [
    "propan[async-rabbit,doc]",
    "tenacity",
]
server = [
    "fastapi",
    "propan[async-rabbit,doc]",
    "tenacity",
    "uvicorn[standard]",
]
all = [
    "qcrbox[dev,docs,client,server]",
]

[project.urls]
"Repository" = "https://github.com/QCrBox/QCrBox/"
"Issue Tracker" = "https://github.com/QCrBox/QCrBox/issues"

[project.scripts]
qcb = "qcrbox.cli:entry_point"
qcrbox-run-registry-server = "qcrbox.registry.server:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.setuptools_scm]
version_file = "qcrbox/_version.py"

[tool.hatch.build.hooks.vcs]
version-file = "qcrbox/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["qcrbox"]

[tool.hatch.build.targets.wheel]
only-include = ["qcrbox"]

[tool.ruff]
line-length = 120
exclude = ["_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
#    # pyupgrade
#    "UP",
#    # flake8-bugbear
#    "B",
#    # flake8-simplify
#    "SIM",
    # isort
    "I",
]

# Ignore `F401`, `F403` (unused imports and * imports) in all `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"qcrbox/qcrbox/common/msg_specs/sql_models/**.py" = ["F821"]
"qcrbox/qcrbox/registry/client/registered_application_client_side.py" = ["F821"]

[tool.ruff.format]
exclude = ["services/applications/*/configure_*.py"]
